// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PSJ Runtime Scenarios .kill is able to stop an executing script: stdOut 1`] = `
"> .kill
> 
ERR: Script aborted
> "
`;

exports[`PSJ Runtime Scenarios .kill shows an error when nothing running: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> .kill
> "
`;

exports[`PSJ Runtime Scenarios .restart hard will disconnect & reset data: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> const y = 1;
> .restart --hard
Device restarting
> 
ERR: Connection to Pico-SDK-JS engine lost."
`;

exports[`PSJ Runtime Scenarios .restart soft will resets all data: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> const y = 1;
> .restart
Device restarting
> y
ERR: y is not defined
> "
`;

exports[`PSJ Runtime Scenarios .run is able to execute an existing file: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> .write test.js --content "print('success!');"
Writing "static content" to "test.js"
18 bytes (1 segments) written
> .run test.js
Executing "test.js"
> 
success!
> "
`;

exports[`PSJ Runtime Scenarios .run is able to kill to execute a new script: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> .write test1.js --content "let y=0; while(true) { y++; }"
Writing "static content" to "test1.js"
29 bytes (1 segments) written
> .write test2.js --content "print('success!');"
Writing "static content" to "test2.js"
18 bytes (1 segments) written
> .run test1.js
Executing "test1.js"
> y > 0
true
> .run test2.js
Executing "test2.js"
> 
ERR: Script aborted
> 
success!
> y > 0
ERR: y is not defined
> "
`;

exports[`PSJ Runtime Scenarios .run shows an error for a hidden file: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> .run .hidden.js
Executing ".hidden.js"
ERR: Hidden files are protected from reading, writing, or deleting
> "
`;

exports[`PSJ Runtime Scenarios .run shows an error for a non-existing file: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> .run unknown.js
Executing "unknown.js"
ERR: File 'unknown.js' not found
> "
`;

exports[`PSJ Runtime Scenarios repl executes javascript: stdOut 1`] = `
"Searching for device running Pico-SDK-JS engine...
Connected to Pico-SDK-JS Engine v0.0.3 at '/dev/ttyACM0'
> const y = 1;
> y
1
> "
`;
